test/librespeed/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
spec:
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
      - name: speedtest
        image: docker.io/adolfintel/speedtest@sha256:1f828fe8337470d2ed5841176bfa6633fd94bda97261a636c35d0bef60a35270
        ports:
        - containerPort: 8080
        env:
        - name: WEBPORT
          value: '8080'
        - name: TELEMETRY
          value: 'true'
        - name: PASSWORD
          value: 'pass'
        - name: EMAIL
          value: 'example@example.com'
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
spec:
  selector:
    app: speedtest
  ports:
  - name: http
    port: 8080
