test/librespeed/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: REPLACE_ME
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx
  tls:
  - secretName: REPLACE_ME
  rules:
  - host: REPLACE_ME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest
            port:
              name: http
